Clean up code smells